@@ -9,6 +9,7 @@ mountall (1.2) UNRELEASED; urgency=low
     handled by an Upstart job supplied by SELinux now.
     - mounted-dev.conf replaces /dev hook
     - mounted-varrun.conf replaces /var/run hook
+    - mounted-tmp.conf replaces /tmp hook
 
  -- Scott James Remnant <scott@ubuntu.com>  Fri, 11 Dec 2009 13:37:17 +0000
 
